--- a/wp-content/plugins/genesis-grandchild/assets/sass/pages/_program-lists.scss
+++ b/wp-content/plugins/genesis-grandchild/assets/sass/pages/_program-lists.scss
@@ -52,10 +52,9 @@ main.content {
 		padding: 0;
 		margin-bottom: 63px;
 		.entry-content { 
-			@include boxmodel(3,70%,5,63px 0 48px,7,0 auto);
+			@include boxmodel(3,100%,5,63px 0 48px,7,0 auto);
 			clear: both;
-			@include tab() { width: 84%; }
-			@include mobile() { text-align: center; }
+			text-align: center; 
 		}
 		&,
 		p { text-align: center; }
@@ -98,6 +97,12 @@ main.content {
 			color: #f16522;
 			font-size: 70px;
 		}
+	}
+
+	.home-odd {
+
+		article.entry .entry-content { padding-top: 0; }
+
 	}
 }
 
